# src/main/resources/swagger/openapi.yaml
@@ -29,7 +29,7 @@ tags:
 
 
 paths:
-  /user:
+  /users:
     get:
       tags:
         - user
@@ -67,7 +67,7 @@ paths:
         '409':
           description: User already exists
 
-  /user/{userId}:
+  /users/{userId}:
     get:
       tags:
         - user
@@ -135,7 +135,7 @@ paths:
         '404':
           description: User not found
 
-  /user/login:
+  /users/login:
     get:
       tags:
         - user
@@ -171,7 +171,7 @@ paths:
         '400':
           description: Invalid username/password supplied
 
-  /user/logout:
+  /users/logout:
     get:
       tags:
         - user
@@ -182,7 +182,7 @@ paths:
           description: successful operation
 
 
-  /profile:
+  /profiles:
     get:
       tags:
         - profile
@@ -220,7 +220,7 @@ paths:
         '409':
           description: Profile already exists
 
-  /profile/{profileId}:
+  /profiles/{profileId}:
     get:
       tags:
         - profile
@@ -288,7 +288,145 @@ paths:
         '404':
           description: Profile not found
 
-  /movie:
+  /users/{userId}/profiles:
+    get:
+      tags:
+        - profile
+      summary: get all profile by user id
+      description: Returns all profile from the system that the user has access to
+      operationId: getAllProfileByUserId
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user to return profile
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A list of profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileArray'
+    post:
+      tags:
+        - profile
+      summary: Create profile by user id
+      description: This can only be done by the logged in user.
+      operationId: createProfileByUserId
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user to create profile
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Created profile object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Profile'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Profile'
+        '400':
+          description: Invalid profile supplied
+        '409':
+          description: Profile already exists
+
+  /users/{userId}/profiles/{profileId}:
+    get:
+      tags:
+        - profile
+      summary: get profile by user id and profile id
+      description: Returns a single profile
+      operationId: getProfileByUserIdAndProfileId
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user to return profile
+          required: true
+          schema:
+            type: string
+        - name: profileId
+          in: path
+          description: ID of profile to return
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Profile'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Profile not found
+    put:
+      tags:
+        - profile
+      summary: Updated profile by user id and profile id
+      description: This can only be done by the logged in user.
+      operationId: updateProfileByUserIdAndProfileId
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user to update profile
+          required: true
+          schema:
+            type: string
+        - name: profileId
+          in: path
+          description: ID of profile to update
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Updated profile object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Profile'
+      responses:
+        '400':
+          description: Invalid profile supplied
+        '404':
+          description: Profile not found
+    delete:
+      tags:
+        - profile
+      summary: Delete profile by user id and profile id
+      description: This can only be done by the logged in user.
+      operationId: deleteProfileByUserIdAndProfileId
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user to delete profile
+          required: true
+          schema:
+            type: string
+        - name: profileId
+          in: path
+          description: ID of profile to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        '400':
+          description: Invalid profile supplied
+        '404':
+          description: Profile not found
+
+  /movies:
     get:
       tags:
         - movie
@@ -326,7 +464,7 @@ paths:
         '409':
           description: Movie already exists
 
-  /movie/{movieId}:
+  /movies/{movieId}:
     get:
       tags:
         - movie
